# work-document

./: how_to_document.py  pyproject.toml  why_documenting.py
Computer_knowledge/: 0_folder_name.py
Computer_knowledge/environment_variables/: 0_resurse.py  1_note.py
Dash/: what_is_dash.py
Dash/bootstrap-components/: 0_resources.py  1_what_is_it.py
Dash/leaflet/: resourses.ipynb
Dash/multi_page/: need_to_learn.py
Diesel/: 1_getting_started.py  resurse.py
FastAPI/: 0_resurse.py  1_first_steps.py
Grouparoo/: 0_resurses.py  1_what_is_grouparoo.py
Multithread/producer_consumer/: 0_producer_consumer_relation.py  resources.py
Multithread/semaphore/: 0_semaphore.py  1_difference_between_mutex_and_semaphore.py
Multithread/synchronization/: 0_synchronizaion.py
Programing/: no_name.py
QGIS/Training/: 0_resurses.py  2.3_navigating_the_map_canvas.py  2.4.5_scale_based_visibility.py  2.4_symbology.py  2_2_add_the_layer(s).py
Rust/: formatted_print  formatted_print.rs  getting_a_number  getting_a_number.rs
Rust/ch3_common_programming_concepts/: branches_if  branches_if.rs  data_type_compound  (+19 more)
code_review/: 0_why.ipynb  1_project_directory_structure.ipynb  2_uml.ipynb  test.pu
css styles/: 2_button_style.py
dash_template/: pyproject.toml
dash_template/src/main/: __init__.py  app.py
dash_template/src/main/assets/: style.css
dash_template/src/main/pages/page1/: page1.py  page2.py
database/: python_sqlite_sqlalchemy.ipynb  relational_database.ipynb  what_is_database.ipynb
datashader/: 0_resurses.py
faham_visualize_heartbeats/: 0_from_when.py
(+201 files in other folders)
